--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,47 @@
 # IDEs
 .idea/
 .vscode/
+*.swp
+*.swo
+*~
 
+# Deno
+.deno/
+deno.lock
+.deno_deps/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+.env.production
+
+# Build outputs
+dist/
+build/
+.output/
+*.tsbuildinfo
+
+# Logs
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+tmp/
+temp/
