--- a/deno.json
+++ b/deno.json
@@ -12,6 +12,7 @@
   },
   "tasks": {
     "dev": "deno run --allow-net --allow-read --allow-write --allow-env src/server/index.ts",
-    "migrate": "deno run --allow-read --allow-write --allow-env src/data/migrations/migrate.ts"
+    "migrate": "deno run --allow-read --allow-write --allow-env src/data/migrations/migrate.ts",
+    "seed": "deno run --allow-read --allow-write --allow-env src/data/seed.ts"
   }
 }
