feat(posts): Add posts table migration and API endpoints

--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,8 @@
     "hono": "npm:hono@^4.0.0",
     "@faker-js/faker": "npm:@faker-js/faker@^9.0.0",
     "zod": "npm:zod@^3.22.0",
-    "sqlite": "jsr:@db/sqlite@^0.12.0"
+    "sqlite": "jsr:@db/sqlite@^0.12.0",
+    "@hono/zod-validator": "npm:@hono/zod-validator@^0.4.0"
   },
   "tasks": {
     "dev": "deno run --allow-net --allow-read --allow-write --allow-env src/server/index.ts",
