--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ temp/
 src/data/db/*.db
 src/data/db/*.db-shm
 src/data/db/*.db-wal
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
