--- a/deno.json
+++ b/deno.json
@@ -9,7 +9,8 @@
     "@faker-js/faker": "npm:@faker-js/faker@^9.0.0",
     "zod": "npm:zod@^3.22.0",
     "sqlite": "jsr:@db/sqlite@^0.12.0",
-    "@hono/zod-validator": "npm:@hono/zod-validator@^0.4.0"
+    "@hono/zod-validator": "npm:@hono/zod-validator@^0.4.0",
+    "hono/cors": "npm:hono@^4.0.0/cors"
   },
   "tasks": {
     "dev": "deno run --allow-net --allow-read --allow-write --allow-env src/server/index.ts",
